--- a/src/main/webapp/WEB-INF/shiro.ini
+++ b/src/main/webapp/WEB-INF/shiro.ini
@@ -31,7 +31,7 @@ securityManager.cacheManager = $cacheManager
 # takes 5 minutes to set up:
 stormpathClient = com.stormpath.shiro.client.ClientFactory
 stormpathClient.cacheManager = $cacheManager
-stormpathClient.apiKeyFileLocation = C:/apiKey1.properties
+stormpathClient.apiKeyFileLocation = C:/apiKey.properties
 stormpathRealm = com.stormpath.shiro.realm.ApplicationRealm
 stormpathRealm.client = $stormpathClient
 # Find this URL in your Stormpath console for an application you create:
